// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SubscribeMessage /> <SubscribeMessage /> 1`] = `
<div
  className="ui icon message"
>
  <i
    aria-hidden="true"
    className="envelope outline icon"
  />
  <div
    className="content"
  >
    <div
      className="header"
    >
      Subscribe to get new recommendations as soon as they arrive.
    </div>
    <br />
    <button
      className="ui small positive button"
      onClick={[Function]}
      role="button"
    >
      Subscribe
    </button>
  </div>
</div>
`;

exports[`<SubscribeMessage /> <SubscribeMessage loading /> 1`] = `
<div
  className="ui icon message"
>
  <i
    aria-hidden="true"
    className="circle notched loading icon"
  />
  <div
    className="content"
  >
    <div
      className="header"
    >
      Subscribe to get new recommendations as soon as they arrive.
    </div>
    <br />
    <button
      className="ui small loading positive button"
      onClick={[Function]}
      role="button"
    >
      Subscribe
    </button>
  </div>
</div>
`;

exports[`<SubscribeMessage /> <SubscribeMessage subscribed /> 1`] = `
<div
  className="ui icon message"
>
  <i
    aria-hidden="true"
    className="envelope outline icon"
  />
  <div
    className="content"
  >
    <div
      className="header"
    >
      Subscribe to get new recommendations as soon as they arrive.
    </div>
    <br />
    <button
      className="ui small negative button"
      onClick={[Function]}
      role="button"
    >
      Unsubscribe
    </button>
  </div>
</div>
`;

exports[`<SubscribeMessage /> <SubscribeMessage subscribed loading /> 1`] = `
<div
  className="ui icon message"
>
  <i
    aria-hidden="true"
    className="circle notched loading icon"
  />
  <div
    className="content"
  >
    <div
      className="header"
    >
      Subscribe to get new recommendations as soon as they arrive.
    </div>
    <br />
    <button
      className="ui small loading negative button"
      onClick={[Function]}
      role="button"
    >
      Unsubscribe
    </button>
  </div>
</div>
`;
